fix: broken links

--- a/docs/tutorials/authentication/setup.mdx
+++ b/docs/tutorials/authentication/setup.mdx
@@ -52,7 +52,7 @@ Never commit sensitive credentials to version control. Use `.env.local` for your
 ## Next Steps
 
 After configuring your environment variables, proceed to:
-- [OAuth Providers](./oauth-providers) - Social login setup
-- [Password Authentication](./password-auth) - Email/password setup
-- [Email Configuration](./email-configuration) - Email templates and verification
+- [OAuth Providers](./oauth)
+- [Password Authentication](./password)
+- [Email Configuration](./2fa)
 
